# ProjectScriber

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: example_pyproject.toml
rust/scriber_native/src/: ast.rs  import.rs  io.rs  lib.rs  render.rs  scan.rs  score.rs  tokenize.rs
scripts/: bench_scan.py  sync_readme.py
src/scriber/: __init__.py  cache.py  cli.py  core.py  native.py  pack.py  render.py  tokens.py
src/scriber/budget/: allocator.py
src/scriber/cli/: main.py
src/scriber/core/: __init__.py  config.py  errors.py  init_config.py  matchers.py  models.py  open_file.py  profiles.py  root.py  symbols.py
src/scriber/engine/: __init__.py  graph_algorithms.py  ranker.py  roles.py  scorer.py
src/scriber/graph/: builder.py  indexes.py  model.py  snapshot.py
src/scriber/graph/analyzers/: __init__.py  base.py  config_refs.py  docs.py  env.py  package.py  tests.py
src/scriber/graph/languages/: __init__.py  cpp.py  extractor.py  go.py  java.py  javascript.py  python.py  rust.py
src/scriber/outline/: __init__.py  base.py  generic.py  python.py
src/scriber/packer/: __init__.py  pack.py
src/scriber/renderer/: llm_report.py
src/scriber/rendering/: __init__.py  exports.py  graph_html.py  renderer.py
src/scriber/scanner/: __init__.py  files.py  scan.py  scan_py.py
tests/: test_cache.py  test_config_schema.py  test_fixes.py  test_init_config.py  test_languages.py  test_native.py  test_scriber.py  test_suite.py  test_symbols.py  test_tokens.py  test_top_deps.py
