[package]
name = "project-scriber-native"
version = "2.1.0"
edition = "2021"

[lib]
name = "_native"
crate-type = ["cdylib"]
path = "rust/scriber_native/src/lib.rs"

[features]
# `bpe` enables a real offline BPE tokenizer (cl100k_base / o200k_base) via
# tiktoken-rs. Off by default to keep the wheel small; opt-in at build time.
# `treesitter` enables AST-based relation extraction (type_reference/inherits)
# via tree-sitter. Off by default; opt-in at build time.
default = []
bpe = ["tiktoken-rs"]
treesitter = ["tree-sitter", "tree-sitter-python"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py310"] }
ignore = "0.4"
globset = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
memchr = "2.7"
regex = "1.10"
tiktoken-rs = { version = "0.12", optional = true }
tree-sitter = { version = "0.25", optional = true }
tree-sitter-python = { version = "0.25", optional = true }
