[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "project-scriber"
version = "2.1.0"
description = "Scriber 2.0: build intelligent code packs from one or more project paths."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "SunneV" }
]
keywords = ["code-context", "llm", "project-map", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "maturin>=1.7,<2",
    "pre-commit",
]

[project.scripts]
scriber = "scriber.cli:main"

[tool.maturin]
python-source = "src"
module-name = "scriber._native"
features = ["pyo3/extension-module", "pyo3/abi3-py310"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.scriber]
version = "2"
format = "md"
output = ".scriber/scriber_pack.md"
only_tree = false
use_gitignore = true
max_files = 0
max_tokens = 0
min_score = 45
path_style = "project-relative"
allow_external_paths = false

[tool.scriber.code_files]
patterns = ["**/*.py", "**/*.pyi", "**/*.rs", "**/*.js", "**/*.jsx", "**/*.ts", "**/*.tsx"]

[tool.scriber.support_files]
enabled = true
patterns = [
  "**/*.toml",
  "**/*.lock",
  "pyproject.toml",
  "README.md",
  "requirements.txt",
  "requirements/*.txt",
  ".env.example",
  "Dockerfile",
  "docker-compose.yml",
  ".github/workflows/*.yml",
  "**/*.svg",
]

[tool.scriber.support_files.content]
default = "auto"
full = ["**/*.toml", "pyproject.toml", "README.md", "requirements.txt", "requirements/*.txt", ".env.example", "Dockerfile", "docker-compose.yml", ".github/workflows/*.yml"]
tree_only = ["**/*.svg", "**/*.lock"]

[tool.scriber.modules]
enabled = true
depth = 2
include_direct_dependencies = true
include_reverse_dependencies = true
include_tests = true
include_same_package = true
include_parent_entrypoints = true
include_project_configs = true
top_dependencies = 10
content_min_score = 50
tree_min_score = 30

[tool.scriber.python]
source_roots = ["src", "app", "."]
test_roots = ["tests", "test"]
entrypoint_patterns = ["main.py", "app.py", "asgi.py", "wsgi.py", "routes.py", "router.py"]

[tool.scriber.tokens]
estimator = "chars"
chars_per_token = 4
